2010-07-20  Christopher Bratusek <zanghar@freenet.de>
	* config.h.in: updated

	* OPTIONS: syntax-update for librep 0.90.7

2010-07-03  Teika kazura <teika@lavabit.com>
	* configure.in
	* man/news.texi
	* man/sawfish.1
	* src/events.c
	* src/keys.c
	* src/keys.h: Keyboard layout switching support.
	In 5-button mode, event's state is masked to drop the key group, and
	lower 13 = 8 + 5 bits are taken. (8 for modifiers, 5 for buttons.)
	This fixes the bug that keyboard layout switching messed bindings.
	5-button is now a command line option, not any more the build-time option.

	* lisp/sawfish/wm/server.jl
	* man/news.texi
	* src/server.c: Errors of asynchronous connection are printed
	to Sawfish's output.

	* man/news.texi
	* src/client.c: Polished news. A comment in source.

2010-06-22  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: add a separator to the start of the root menu
	                            the menu might disappear directly due to the
				    dummy "Sawfish Rootmenu" headline, this border
				    prevents that.

2010-06-22  Teika kazura <teika@lavabit.com>
	* man/news.texi
	* src/functions.c: x-atom-name accepts full 32 unsigned
	int. Previously only 30 bits are treated, if the architecture is
	32-bit.

	* lisp/sawfish/wm/server.jl
	* man/news.texi: Prints backtrace for sawfish-client, too.
	This makes sense if you're using librep >= 0.90.7. Harmless anyway.

	* lisp/sawfish/cfg/main.jl.in
	* lisp/sawfish/cfg/shell.jl
	* man/news.texi: Made `sawfish-config' minimal, moving most the
	contents to sawfish.cfg.shell.  This facilitates hacks.

	* lisp/sawfish/wm/ext/error-handler.jl
	* man/news.texi: Better error message.
	Phrase "Sawfish error:" is prepended to error messages printed to
	standard error.

	* lisp/sawfish/wm/util/compat.jl
	* man/news.texi: Restored two options from "obsolete" declaration.
	They're workspace-boundary-mode and workspace-send-boundary-mode.

	* lisp/sawfish/wm/commands.jl
	* man/faq.texi