@@ -96,6 +96,6 @@ it, so you need to double-click it.
 but: the old ui is -of course- still available, use:
 
 sawfish-config --flatten [in a terminal]
-(define-special-variable customize-program "sawfish-config --flatten") [in your config-file]
+(defvar-setq customize-program "sawfish-config --flatten") [in your config-file]
 
 - Christopher Bratusek <zanghar@freenet.de>
