@@ -1,7 +1,17 @@
 2010-07-20  Christopher Bratusek <zanghar@freenet.de>
 	* config.h.in: updated
 
+	* configure.in: bump minimum librep to 0.90.7
+
+	* lisp/sawfish/wm/integration/gnome.jl
+	* lisp/sawfish/wm/integration/kde.jl
+	* themes/Elberg-tabbed/INSTALL
+	* themes/get-S-tabbed/INSTALL
+	* screenshotter/prep_config.sh
+	* README.IMPORTANT
 	* OPTIONS: syntax-update for librep 0.90.7
+
+	* man/news.texi: updated
 
 2010-07-03  Teika kazura <teika@lavabit.com>
 	* configure.in
